# AIP

./: CMakeLists.txt  README.md  main.cpp
include/PPMIO/: ppm_io.cpp
